--- a/addons/web/views/database_manager.html
+++ b/addons/web/views/database_manager.html
@@ -2,9 +2,8 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Odoo</title>
+  <title>Eagle ERP</title>
   <link rel="shortcut icon" href="/web/static/src/img/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="/web/static/lib/fontawesome/css/font-awesome.css">
   <link rel="stylesheet" href="/web/static/lib/bootstrap/css/bootstrap.css">
   <script src="/web/static/lib/jquery/jquery.js" type="text/javascript"></script>
   <script src="/web/static/lib/bootstrap/js/modal.js"></script>
@@ -53,7 +52,7 @@
 {%- endmacro %}
 
 {% macro create_form() -%}
-  <p>Odoo is up and running! <br />
+  <p>Eagle ERP is up and running! <br />
   Create a new database by filling out the form,
   you'll be able to install your first app in a minute.</p>
   {{ master_input() }}
