--- a/addons/web/views/database_manager.html
+++ b/addons/web/views/database_manager.html
@@ -118,7 +118,7 @@
       </div>
       {% if insecure and databases %}
       <div class="alert alert-warning">
-      Warning, your Odoo database manager is not protected.
+      Warning, your Eagle database manager is not protected.
       Please <a href="#" data-toggle="modal" data-target=".o_database_master">set a master password</a>
       to secure it.
       </div>
