--- a/addons/web/views/webclient_templates.xml
+++ b/addons/web/views/webclient_templates.xml
@@ -226,14 +226,20 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 o_database_list">
                     <div class="text-center">
-                        <img t-attf-src="/web/binary/company_logo{{ '?dbname='+db if db else '' }}"/>
+                        <img t-attf-src="/web/static/src/img/logo2.png{{ '?dbname='+db if db else '' }}"/>
+                        
+                        
+                        
+                    <!--    <img t-attf-src="/web/binary/company_logo{{ '?dbname='+db if db else '' }}"/> -->
+                    
+                    
                     </div>
                     <t t-raw="0"/>
                     <div class="text-center" t-if="not disable_footer">
                         <t t-if="not disable_database_manager">
                             <a class="" href="/web/database/manager">Manage Databases</a> |
                         </t>
-                        <a href="https://www.odoo.com" target="_blank">Powered by <span>Odoo</span></a>
+                        <a href="https://www.eagle-erp-bd.com" target="_blank">Powered by <span>Eagle ERP</span></a>
                     </div>
                 </div>
             </div>
