--- a/addons/website/views/website_templates.xml
+++ b/addons/website/views/website_templates.xml
@@ -101,7 +101,7 @@
                 and main_object.website_meta_description or website_meta_description"/>
             <meta name="keywords" t-att-content="main_object and 'website_meta_keywords' in main_object
                 and main_object.website_meta_keywords or website_meta_keywords"/>
-            <meta name="generator" content="Odoo"/>
+            <meta name="generator" content="Eagle ERP"/>
 
             <!-- OpenGraph tags for Facebook sharing -->
             <meta property="og:title" t-att-content="additional_title" />
@@ -200,11 +200,11 @@
     <xpath expr="//footer" position="inside">
         <div class="container mt16 mb8">
             <div class="pull-right" t-ignore="true" t-if="not editable">
-                Create a <a href="http://www.odoo.com/page/website-builder">free website</a> with
-                <a class="label label-danger" href="http://www.odoo.com/page/website-builder">Odoo</a>
+                Create a <a href="http://www.eagle-erp.com">website</a> with
+                <a class="label label-danger" href="http://www.eagle-erp.com">Eagle ERP</a>
             </div>
-            <div class="pull-left text-muted" itemscope="itemscope" itemtype="http://schema.org/Organization">
-                Copyright &amp;copy; <span t-field="res_company.name" itemprop="name">Company name</span>
+            <div class="pull-left text-muted" itemscope="itemscope" itemtype="http://www.eagle-erp.com">
+                Copyright &amp;copy; <span t-field="res_company.name" itemprop="name">Eagle ERP</span>
             </div>
         </div>
     </xpath>
@@ -326,12 +326,12 @@
                     </h4>
                     <div>
                         <p>
-                            We are a team of passionate people whose goal is to improve everyone's
-                            life through disruptive products. We build great products to solve your
+                            We are a Eagle team of passionate people whose goal is to improve everyone's
+                            life through disruptive air. We build best solution to solve your
                             business problems.
                         </p>
                         <p>
-                            Our products are designed for small to medium size companies willing to optimize
+                            Our Services are designed for any kind of companies willing to optimize
                             their performance.
                         </p>
                     </div>
@@ -475,13 +475,13 @@
 </template>
 
 <!-- Error and special pages -->
-<template id="website_info" name="Odoo Information">
+<template id="website_info" name="Eagle ERP Information">
     <t t-call="website.layout">
         <div id="wrap"/>
     </t>
 </template>
 
-<template id="show_website_info" inherit_id="website.website_info" customize_show="True" name="Show Odoo Information">
+<template id="show_website_info" inherit_id="website.website_info" customize_show="True" name="Show Eagle ERP Information">
     <xpath expr="//div[@id='wrap']" position="inside">
         <div class="oe_structure">
             <section class="container">
@@ -490,10 +490,10 @@
               </t>
               <t t-if="version">
                 <h1><t t-esc="res_company.name"/>
-                    <small>Odoo Version <t t-raw="version.get('server_version')"/></small>
+                    <small>Eagle ERP Version <t t-raw="version.get('server_version')"/></small>
                 </h1>
                 <p>
-                    Information about the <t t-esc="res_company.name"/> instance of Odoo, the <a href="https://www.odoo.com">Open Source ERP</a>.
+                    Information about the <t t-esc="res_company.name"/> instance of Eagle ERP, the <a href="https://www.eagle-erp.com">ERP and ebusiness</a>.
                 </p>
 
                 <div class="alert alert-warning alert-dismissable mt16" groups="website.group_website_publisher">
@@ -804,7 +804,7 @@ Sitemap: <t t-esc="url_root"/>sitemap.xml
 </template>
 
 <template id="sitemap_xml">&lt;?xml version="1.0" encoding="UTF-8"?&gt;
-<urlset t-attf-xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+<urlset t-attf-xmlns="http://www.eagle-erp.com">
     <t t-raw="content"/>
 </urlset>
 </template>
