--- a/addons/web/views/webclient_templates.xml
+++ b/addons/web/views/webclient_templates.xml
@@ -485,12 +485,12 @@
         <script type="text/javascript" src="/web/static/lib/pdfjs/src/core/murmurhash3.js"></script>
         <!--
             NOTE JEM : PDFJS not-minified load its assets dynamically. Not minify, this lib is huge (4000 lines).
-            To load PDFJS using odoo bundle, we create a custom worker_loader, to avoid reloading all the assets (core/*.js) dynamically.
+            To load PDFJS using Eagle ERP bundle, we create a custom worker_loader, to avoid reloading all the assets (core/*.js) dynamically.
             Loading all this assets in a bundle can be problematic in debug mode, since we don't wait all assets to be loaded to start using PDFJS. That's why, in debug mode, we use the native loader, otherwise our custom loader is used.
         -->
         <t t-if="not debug">
             <script>
-                // Use Odoo PDFJS Loader, to avoid dynamic assets loading
+                // Use Eagle ERP PDFJS Loader, to avoid dynamic assets loading
                 PDFJS.workerSrc = '/web/static/lib/pdfjs/worker_loader_by_odoo.js';
                 PDFJS.disableWorker = true;
             </script>
