--- a/addons/account/views/account_view.xml
+++ b/addons/account/views/account_view.xml
@@ -643,7 +643,7 @@
                 occurring over a given period of time on a bank account. You
                 should receive this periodicaly from your bank.
               </p><p>
-                Odoo allows you to reconcile a statement line directly with
+                Eagle ERP allows you to reconcile a statement line directly with
                 the related sale or puchase invoices.
               </p>
             </field>
@@ -726,7 +726,7 @@
               <p>
                 A bank statement line is a financial transaction on a bank account.
               </p><p>
-                Odoo allows you to reconcile a statement line directly with
+                Eagle ERP allows you to reconcile a statement line directly with
                 the related sale or puchase invoice(s).
               </p>
             </field>
@@ -1395,7 +1395,7 @@
                 A journal entry consists of several journal items, each of
                 which is either a debit or a credit transaction.
               </p><p>
-                Odoo automatically creates one journal entry per accounting
+                Eagle ERP automatically creates one journal entry per accounting
                 document: invoice, refund, vendor payment, bank statements,
                 etc. So, you should record journal entries manually only/mainly
                 for miscellaneous operations.
