--- a/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
+++ b/addons/website_hr_recruitment/views/website_hr_recruitment_templates.xml
@@ -290,7 +290,7 @@
                     <ul>
                         <li><a href="#">The founder’s story</a></li>
                         <li><a href="#">The culture</a></li>
-                        <li><a href="https://twitter.com/odoo/likes">What people say about us?</a></li>
+                        <li><a href="https://twitter.com/">What people say about us?</a></li>
                     </ul>
                 </div>
             </div>
