--- a/addons/account/views/web_planner_data.xml
+++ b/addons/account/views/web_planner_data.xml
@@ -30,10 +30,10 @@
                     </ul>
                     <p>Enjoy your Eagle ERP experience,</p>
                     <div class="mt32">
-                        <img class="signature mb8" src="/web_planner/static/src/img/fabien_signature.png"/>
+                        <img class="signature mb8" src=""/>
                         <address>
                             For the Eagle ERP Team,<br/>
-                            Fabien Pinckaers, Founder
+                            Md. Shaheen Hossain, Founder
                         </address>
                     </div>
                 </div>
